[tool.poetry]
name = "scFormer"
version = "0.1.0"
description = "Large-scale pretrain of single cell using transformer."
authors = ["Haotian <subercui@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
scvi-tools = "^0.16.0"
llvmlite = "^0.38.0"
scanpy = "^1.9.1"
torch = "~1.9"
torchtext = "0.10.1" # torch 1.9.1 needs torchtext version 0.10.1
transformers = "^4.18.0"
numba = "^0.55.1"
scikit-misc = "^0.1.4"
umap-learn = "^0.5.3"
leidenalg = "^0.8.10"
datasets = "^2.3.0"
typing-extensions = "^4.2.0"
scib = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
tensorflow = "^2.8.0"
torch-scatter = {url = "https://data.pyg.org/whl/torch-1.9.0%2Bcu102/torch_scatter-2.0.8-cp37-cp37m-linux_x86_64.whl", python = "~3.7"}
torch-sparse = {url = "https://data.pyg.org/whl/torch-1.9.0%2Bcu102/torch_sparse-0.6.12-cp37-cp37m-linux_x86_64.whl", python = "~3.7"}
torch-cluster = {url = "https://data.pyg.org/whl/torch-1.9.0%2Bcu102/torch_cluster-1.5.9-cp37-cp37m-linux_x86_64.whl", python = "~3.7"}
torch-spline-conv = {url = "https://data.pyg.org/whl/torch-1.9.0%2Bcu102/torch_spline_conv-1.2.1-cp37-cp37m-linux_x86_64.whl", python = "~3.7"}
# if using cuda 11.1 and torch 1.9.1, use the following
# pip install torch-scatter torch-cluster torch-sparse==0.6.12 -f https://data.pyg.org/whl/torch-1.9.1+cu111.html
torch-geometric = "2.0.4"
cell-gears = "^0.0.1"
dcor = "~0.5.3"
wandb = "^0.12.3"
plotly = "^5.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
